3 groups of people and 'animation' sorted.

--- a/Layouts/Layout 1.uistate.xml
+++ b/Layouts/Layout 1.uistate.xml
@@ -4,11 +4,11 @@
 It is entirely optional and the project will load without it.  If you are placing the project under source control,
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
-        <position-x>322.8</position-x>
-        <position-y>426.262</position-y>
+        <position-x>514.914</position-x>
+        <position-y>433.036</position-y>
         <position-z>121</position-z>
-        <lookat-x>322.8</lookat-x>
-        <lookat-y>426.262</lookat-y>
+        <lookat-x>514.914</lookat-x>
+        <lookat-y>433.036</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -23,10 +23,10 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Darkness" />
+    <active-layer name="Things" />
     <layers>
         <layer locked="1" name="background" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="Layer 0" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Things" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Darkness" parallax-in-editor="0" visible="0" />
     </layers>
 </c2uistate>
